# vibefoundry-sandbox

./: .gitignore  CLAUDE.md  Makefile  README.md  metadatafarmer.py  pyproject.toml
.devcontainer/: devcontainer.json  start-sync.sh
app_folder/: CLAUDE.md  metadatafarmer.py  sync_server.py
app_folder/meta_data/: input_metadata.txt  output_metadata.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: CodeViewer.jsx  CodespaceSync.jsx  DataFrameViewer.jsx  FileTree.jsx  FileViewer.jsx  FolderPicker.css  FolderPicker.jsx  JsonViewer.jsx  LocalTerminal.jsx  MarkdownViewer.jsx  NewFileModal.jsx  ScriptRunner.css  ScriptRunner.jsx  Terminal.jsx
frontend/src/utils/: codespaceSync.js  config.js  fileSystem.js  github.js
local_helper/: README.txt  run_mac.command  run_windows.pyw  vibefoundry_helper.py
local_helper/codespace_bridge/: README.md  bridge.py  run_mac.command  run_windows.pyw
meta_data/: input_metadata.txt  output_metadata.txt
src/vibefoundry/: __init__.py  __main__.py  browser.py  cli.py  metadata.py  runner.py  server.py  watcher.py
