[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibefoundry"
version = "0.1.0"
description = "A local IDE for data science workflows with script running, metadata generation, and GitHub Codespace sync"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "VibeFoundry"}
]
keywords = ["ide", "data-science", "scripts", "codespace"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: User Interfaces",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "websockets>=11.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[project.scripts]
vibefoundry = "vibefoundry.cli:main"

[project.urls]
Homepage = "https://vibefoundry.ai"
Repository = "https://github.com/vibefoundry/vibefoundry-ide"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vibefoundry = ["static/**/*"]
